--- a/Nature-Spots/views/spots/spot-favorites.hbs
+++ b/Nature-Spots/views/spots/spot-favorites.hbs
@@ -1,17 +1,19 @@
-<h1>My Favorites</h1>
+<div class="favorites-container">
+  <h1>My Favorites</h1>
 
-{{#each favorites}}
-  <div>
-    <h3>{{title}}</h3>
-    <p>Country: {{country}}</p>
-    <p>Continent: {{continent}}</p>
-    <p>Description: {{description}}</p>
-    <img src="{{imageUrl}}" alt="" />
+  {{#each favorites}}
+    <div>
+      <h3>{{title}}</h3>
+      <p>Country: {{country}}</p>
+      <p>Continent: {{continent}}</p>
+      <p>Description: {{description}}</p>
+      <img src="{{imageUrl}}" alt="" />
 
-    <form action="/favorites/{{_id}}/delete" method="post">
-      <button type="submit">Remove from Favorites</button>
-    </form>
-  </div>
-{{else}}
-  <p>No favorites yet.</p>
-{{/each}}
+      <form action="/favorites/{{_id}}/delete" method="post">
+        <button type="submit">Remove from Favorites</button>
+      </form>
+    </div>
+  {{else}}
+    <p>No favorites yet.</p>
+  {{/each}}
+</div>
