--- a/Nature-Spots/public/stylesheets/style.css
+++ b/Nature-Spots/public/stylesheets/style.css
@@ -1,16 +1,383 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+.navbar {
+  background-color: black;
+  color: beige;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 26px 20px;
+  box-shadow: 0 8px 12px rgba(249, 245, 245, 0.651);
+}
+.navbar-menu {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
-a {
-  color: #00b7ff;
+.navbar-item {
+  margin-right: 10px;
+}
+.navbar-brand {
+  font-size: 24px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 20px 20px;
+  background: linear-gradient(
+    45deg,
+    #ff3366,
+    #ff9933,
+    #ffff66,
+    #66ccff,
+    #9933ff,
+    #ff3366,
+    rgb(7, 130, 7),
+    rgb(126, 39, 126)
+  );
+  background-size: 600% 600%;
+  -webkit-animation: aurora-gradient 05s ease infinite;
+  -moz-animation: aurora-gradient 05s ease infinite;
+  animation: aurora-gradient 05s ease infinite;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
 
-h1 {
-  color: 15px;
+@-webkit-keyframes aurora-gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
+@-moz-keyframes aurora-gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes aurora-gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 img {
   height: 200px;
+  object-fit: cover;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.navbar-item a:hover {
+  background-color: chartreuse;
+}
+
+/*LOG IN */
+/* Styling for the login form */
+
+#login-form {
+  max-width: 400px;
+  margin: 50px auto 0; /* Added margin-top: 50px */
+  padding: 20px;
+  background-color: #f2f2f2;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+/* Styling for the form heading */
+#login-form h2 {
+  text-align: center;
+  color: #333;
+}
+
+/* Styling for form labels */
+#login-form label {
+  display: block;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+/* Styling for form input fields */
+#login-form input[type="text"],
+#login-form input[type="email"],
+#login-form input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+/* Styling for the submit button */
+#login-form button[type="submit"] {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* Styling for error message */
+#login-form .error {
+  color: red;
+  margin-top: 10px;
+}
+
+/* SIGN UP */
+/* Styling for the sign-up form */
+#form {
+  max-width: 400px;
+  margin: 50px auto 0;
+  padding: 20px;
+  background-color: #f2f2f2;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+#form h2 {
+  text-align: center;
+}
+
+#form label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+#form input[type="text"],
+#form input[type="email"],
+#form input[type="password"] {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+#form button[type="submit"] {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#form button[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+#form .error {
+  color: red;
+  margin-top: 10px;
+}
+
+/* CREATE NEW PLACE */
+
+/* CSS for the form container */
+.form-container {
+  width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  margin-top: 20px;
+}
+
+/* CSS for form labels */
+.form-container label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+/* CSS for form inputs */
+.form-container input[type="text"],
+.form-container input[type="file"] {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+/* CSS for submit button */
+.form-container button[type="submit"] {
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* CSS for form button alignment */
+.form-container::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+/* MY FAVORITES PAGE */
+/* CSS for the favorites container */
+.favorites-container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+/* CSS for the favorites item */
+.favorite-item {
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.favorite-item h3 {
+  margin: 0;
+}
+
+.favorite-item p {
+  margin: 5px 0;
+}
+
+.favorite-item img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.favorite-item form {
+  margin-top: 10px;
+}
+
+.favorite-item button[type="submit"] {
+  padding: 5px 10px;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.favorite-item button[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+/* SPOT DETAILS */
+/* CSS for the nature spot details container */
+.details-container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+/* CSS for the nature spot details */
+.details-container h1 {
+  margin-bottom: 20px;
+}
+
+.details-container h3 {
+  margin: 20px 0 10px;
+}
+
+.details-container p {
+  margin: 5px 0;
+}
+
+.details-container img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.details-container form {
+  margin-top: 10px;
+}
+
+.details-container textarea {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+.details-container button[type="submit"] {
+  padding: 5px 10px;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.details-container button[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+/* CSS for the reviews */
+.details-container .reviews-container {
+  margin-top: 20px;
+}
+
+.details-container .review-item {
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.details-container .review-item p {
+  margin: 5px 0;
+}
+
+.details-container .review-item p:first-child {
+  font-weight: bold;
+}
+
+.details-container .no-reviews {
+  margin-top: 10px;
+}
+
+/* PROFILE */
+.profile-container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+}
+
+.profile-container h1 {
+  font-size: 24px;
+  text-align: center;
+}
+
+.profile-container h3 {
+  font-size: 18px;
+  margin-top: 20px;
+}
+
+.profile-container p {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.profile-container a {
+  display: block;
+  text-align: center;
+  margin-top: 20px;
 }
