--- a/Nature-Spots/views/auth/login.hbs
+++ b/Nature-Spots/views/auth/login.hbs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="/stylesheets/style.css">
 <div id="login-form">
   <h2>Log In</h2>
   <form action="/auth/login" method="POST">
@@ -22,3 +23,5 @@
     {{/if}}
   </form>
 </div>
+
+
