--- a/Nature-Spots/views/edit-profile.hbs
+++ b/Nature-Spots/views/edit-profile.hbs
@@ -1,1 +1,18 @@
-<h1>teste</h1>
+<!-- edit-profile.hbs -->
+<h1>Edit Profile</h1>
+
+<form action="/edit-profile" method="post">
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email" value="{{user.email}}" required />
+
+  <label for="username">Username:</label>
+  <input
+    type="text"
+    id="username"
+    name="username"
+    value="{{user.username}}"
+    required
+  />
+
+  <button type="submit">Save Changes</button>
+</form>
