--- a/Nature-Spots/views/layout.hbs
+++ b/Nature-Spots/views/layout.hbs
@@ -9,9 +9,23 @@
   </head>
 
   <body>
+    
+   
+ <nav class="navbar">
+      <div class="navbar-brand">Visit Earth</div>
+      <ul class="navbar-menu">
+        <li class="navbar-item"><a href="/nature-spots/">Home</a></li>
+        <li class="navbar-item"><a href="/auth/login">Login</a></li>
+        <li class="navbar-item"><a
+            href="/favorites"
+          >Favourites</a></li>
+        <li class="navbar-item"><a href="/auth/signup">SignUp</a></li>
+      </ul>
+    </nav>
 
-    {{{body}}}
-
+    <main>
+            {{{body}}}
+     </main>
     <script src="/js/script.js"></script>
   </body>
 
