--- a/Nature-Spots/public/stylesheets/style.css
+++ b/Nature-Spots/public/stylesheets/style.css
@@ -1,16 +1,120 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+.navbar{
+  background-color: black;
+  color: beige;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 26px 20px;
+  box-shadow: 0 8px 12px rgba(249, 245, 245, 0.651);
+}
+.navbar-menu {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
-a {
-  color: #00b7ff;
+.navbar-item {
+  margin-right: 10px;
+}
+.navbar-brand {
+  font-size: 30px;
+  font-style: italic;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 20px 20px;
+  background: linear-gradient(45deg, #ff3366, #ff9933, #ffff66, #66ccff, #9933ff, #ff3366, rgb(7, 130, 7), rgb(126, 39, 126));
+  background-size: 600% 600%;
+  -webkit-animation: aurora-gradient 05s ease infinite;
+  -moz-animation: aurora-gradient 05s ease infinite;
+  animation: aurora-gradient 05s ease infinite;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
 
-h1 {
-  color: 15px;
+@-webkit-keyframes aurora-gradient {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
 }
 
+@-moz-keyframes aurora-gradient {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+
+@keyframes aurora-gradient { 
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
 img {
   height: 200px;
+  object-fit: cover;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.navbar-item a:hover {
+  background-color:chartreuse;
+}
+
+
+/* Tutorial CSS starts here */
+:root {
+  --bg: white;
+  --text: black;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg: black;
+    --text: white;
+  }
+}
+
+#color-mode:checked ~ * {
+  --bg: black;
+  --text: white;
+}
+
+@media (prefers-color-scheme: dark) {
+  #color-mode:checked ~ * {
+    --bg: white;
+    --text: black;
+  }
+}
+
+.color-scheme-wrapper {
+  min-height: 100vh;
+  background: var(--bg);
+  color: var(--text);
+}
+
+.light-mode-hide {
+  display: none;
+}
+
+@media (prefers-color-scheme: dark) {
+  .dark-mode-hide {
+    display: none;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .light-mode-hide {
+    display: initial;
+  }
+}
+
+/* Tutorial css ends here, the rest is extra styles for prettiness */
+#color-mode:checked + label:after {
+  color: var(--bg);
+  content: "\u{1F321}"; /* Unicode character for a small toggle icon */
+  margin-left: 0.5rem; /* Adjust the margin as needed */
+}
+
+label:after {
+  content: "\u{1F320}"; /* Unicode character for the default toggle icon */
+  /* Existing styles */
 }
