--- a/Nature-Spots/views/spots/spot-details.hbs
+++ b/Nature-Spots/views/spots/spot-details.hbs
@@ -27,6 +27,9 @@
   <textarea name="content" id="content" cols="30" rows="5"></textarea>
   <button type="submit">Submit</button>
 </form>
+    <form action="/nature-spots/delete/{{id}}" method="post" style="margin: 0">
+  <button class="btn btn-outline-dark btn-sm" type="submit">Delete</button>
+  </form>
 
 <!-- Back button -->
 <a href="/nature-spots">Back</a>
