--- a/Nature-Spots/views/profile.hbs
+++ b/Nature-Spots/views/profile.hbs
@@ -3,10 +3,10 @@
 
   <div>
     <h3>Username:</h3>
-    <p>{{username}}</p>
+    <p>{{user.username}}</p>
 
     <h3>Email:</h3>
-    <p>{{email}}</p>
+    <p>{{user.email}}</p>
 
     <!-- Add more profile information fields as needed -->
 
