--- a/Nature-Spots/views/review-update.hbs
+++ b/Nature-Spots/views/review-update.hbs
@@ -1,5 +1,5 @@
 <h1>Edit Review</h1>
-<form action="/nature-spots/review/update/{{review._id}}" method="post">
+<form action="/nature-spots/review/{{review._id}}/update" method="post">
   <label for="content">Review:</label>
   <textarea
     name="content"
