--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,9 +16,9 @@
 
   <body>
     <nav class="navbar">
-      <div class="navbar-brand">Visit Earth</div>
+      <div class="navbar-brand">Natural Spots</div>
       <ul class="navbar-menu">
-        <li class="navbar-item"><a href="/nature-spots/">Home</a></li>
+        <li class="navbar-item"><a href="/">Home</a></li>
         <li class="navbar-item"><a href="/auth/login">Login</a></li>
         <li class="navbar-item"><a href="/auth/signup">SignUp</a></li>
         <li class="navbar-item"><a href="/auth/logout">Logout</a></li>
