--- a/views/spots/spot-list.hbs
+++ b/views/spots/spot-list.hbs
@@ -144,7 +144,7 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
-        <h1 class="fw-light">Nature Spots</h1>
+        <h1 class="fw-light">Spots List</h1>
         <p class="lead text-body-secondary">Check awesome nature places around the globe.</p>
         <p>
           <a href="/nature-spots/create" class="btn btn-primary my-2">Create New Spot</a>
@@ -195,7 +195,7 @@
 <footer class="text-body-secondary py-5">
   <div class="container">
     <p class="float-end mb-1">
-      <a href="#">Back to top</a>
+      <a href="#" class="back-button">Back to top</a>
     </p>
     <p class="mb-1"></p>
     <p class="mb-0"><a href="/"></a><a href="/docs/5.3/getting-started/introduction/"></a>.</p>
