--- a/views/edit-profile.hbs
+++ b/views/edit-profile.hbs
@@ -1,18 +1,37 @@
 <!-- edit-profile.hbs -->
-<h1>Edit Profile</h1>
 
-<form action="/edit-profile" method="post">
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="email" value="{{user.email}}" required />
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Edit Profile</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="editprofile-container">
+      <h1>Edit Profile</h1>
 
-  <label for="username">Username:</label>
-  <input
-    type="text"
-    id="username"
-    name="username"
-    value="{{user.username}}"
-    required
-  />
+      <form action="/edit-profile" method="post" class="profile-form">
+        <label for="email">Email:</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          value="{{user.email}}"
+          required
+        />
 
-  <button type="submit">Save Changes</button>
-</form>
+        <label for="username">Username:</label>
+        <input
+          type="text"
+          id="username"
+          name="username"
+          value="{{user.username}}"
+          required
+        />
+
+        <button type="submit" class="save-button">Save Changes</button>
+      </form>
+    </div>
+  </body>
+</html>
