--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,184 @@
-<h1>{{appTitle}} 🚀</h1>
-<p>Welcome Ironhacker!</p>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>Material Design for Bootstrap</title>
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
+    />
+    <!-- Google Fonts Roboto -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+    />
+    <!-- MDB -->
+    <link rel="stylesheet" href="css/mdb.min.css" />
+    <!-- Custom styles -->
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <!--Main Navigation-->
+    <header>
+      <style>
+        #intro { background-image:
+        url("https://wallpaper-house.com/data/out/12/wallpaper2you_495265.jpg");
+        height: 107.5vh; } /* Height for devices larger than 576px */ @media
+        (min-width: 992px) { #intro { margin-top: -58.59px; } } .navbar
+        .nav-link { color: #fff !important; }
+      </style>
 
+      <!-- Navbar -->
+      <!--<nav
+        class="navbar navbar-expand-lg navbar-dark d-none d-lg-block"
+        style="z-index: 2000;"
+      >
+        <div class="container-fluid">
+        
+          <a
+            class="navbar-brand nav-link"
+            target="_blank"
+            href="https://mdbootstrap.com/docs/standard/"
+          >
+            <strong>MDB</strong>
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-mdb-toggle="collapse"
+            data-mdb-target="#navbarExample01"
+            aria-controls="navbarExample01"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarExample01">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item active">
+                <a class="nav-link" aria-current="page" href="#intro">Home</a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA"
+                  rel="nofollow"
+                  target="_blank"
+                >Learn Bootstrap 5</a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link"
+                  href="https://mdbootstrap.com/docs/standard/"
+                  target="_blank"
+                >Download MDB UI KIT</a>
+              </li>
+            </ul>-->
+
+            <ul class="navbar-nav d-flex flex-row">
+              <!-- Icons -->
+             <!-- <li class="nav-item me-3 me-lg-0">
+                <a
+                  class="nav-link"
+                  href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA"
+                  rel="nofollow"
+                  target="_blank"
+                >
+                  <i class="fab fa-youtube"></i>
+                </a>
+              </li>
+              <li class="nav-item me-3 me-lg-0">
+                <a
+                  class="nav-link"
+                  href="https://www.facebook.com/mdbootstrap"
+                  rel="nofollow"
+                  target="_blank"
+                >
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+              </li>
+              <li class="nav-item me-3 me-lg-0">
+                <a
+                  class="nav-link"
+                  href="https://twitter.com/MDBootstrap"
+                  rel="nofollow"
+                  target="_blank"
+                >
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </li>
+              <li class="nav-item me-3 me-lg-0">
+                <a
+                  class="nav-link"
+                  href="https://github.com/mdbootstrap/mdb-ui-kit"
+                  rel="nofollow"
+                  target="_blank"
+                >
+                  <i class="fab fa-github"></i>-->
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- Navbar -->
+
+      <!-- Background image -->
+      <div id="intro" class="bg-image shadow-2-strong">
+        <div class="mask" style="background-color: rgba(0, 0, 0, 0.8);">
+          <div
+            class="container d-flex align-items-center justify-content-center text-center h-100"
+          >
+            <div class="text-white">
+              <h1 class="mb-3">Nature Spots</h1>
+              <h5 class="mb-4">Best & free guide of best nature-spots around the globe</h5>
+              <a
+                class="btn btn-outline-light btn-lg m-2"
+                href="/auth/signup"
+              >Sign Up</a>
+              <a
+                class="btn btn-outline-light btn-lg m-2"
+                href="/auth/login"
+              >Login</a>
+              <a
+                class="btn btn-outline-light btn-lg m-2"
+                href="/nature-spots"
+              >Spots List</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Background image -->
+    </header>
+    <!--Main Navigation-->
+
+    <!--Main layout-->
+
+    <!--Section: Content-->
+
+    <!-- Copyright -->
+
+    <!--Footer-->
+    <!-- MDB -->
+    <script type="text/javascript" src="js/mdb.min.js"></script>
+    <!-- Custom scripts -->
+    <script type="text/javascript" src="js/script.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
