--- a/views/edit-profile.hbs
+++ b/views/edit-profile.hbs
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Edit Profile</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="stylesheets/style.css" />
   </head>
   <body>
-    <div class="editprofile-container">
+    <div class="profile-container">
       <h1>Edit Profile</h1>
 
       <form action="/edit-profile" method="post" class="profile-form">
@@ -33,5 +33,6 @@
         <button type="submit" class="save-button">Save Changes</button>
       </form>
     </div>
+    <a href="/profile" class="back-button">Back</a>
   </body>
 </html>
