--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -13,6 +13,6 @@
   </div>
 
   <!-- Back button -->
-  <a href="/edit-profile">Edit Profile</a>
-  <a href="/nature-spots">Back to Spots List</a>
-</div>
+  <a href="/edit-profile" class="edit-profile">Edit Profile</a>
+  </div>
+<a href="/nature-spots" class="back-button">Back</a>
