--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,10 +19,11 @@
       <div class="navbar-brand">Natural Spots</div>
       <ul class="navbar-menu">
         <li class="navbar-item"><a href="/">Home</a></li>
-        <li class="navbar-item"><a href="/auth/login">Login</a></li>
         <li class="navbar-item"><a href="/auth/signup">SignUp</a></li>
-        <li class="navbar-item"><a href="/auth/logout">Logout</a></li>
+        <li class="navbar-item"><a href="/auth/login">Login</a></li>
         <li class="navbar-item"><a href="/profile">Profile</a></li>
+        <li class="navbar-item"><a href="/about-us">About Us</a></li>
+        <li class="navbar-item"><a href="/auth/logout">Logout</a></li>
       </ul>
     </nav>
 
