--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,7 +16,7 @@
 
   <body>
     <nav class="navbar">
-      <div class="navbar-brand">Natural Spots</div>
+      <div class="navbar-brand">Nature Spots</div>
       <ul class="navbar-menu">
         <li class="navbar-item"><a href="/">Home</a></li>
         <li class="navbar-item"><a href="/auth/signup">SignUp</a></li>
