--- a/views/review-update.hbs
+++ b/views/review-update.hbs
@@ -1,22 +1,30 @@
-<h1>Edit Review</h1>
-<form action="/nature-spots/review/update/{{review._id}}" method="post">
-  <label for="content">Review:</label>
-  <textarea
-    name="content"
-    id="content"
-    cols="30"
-    rows="5"
-  >{{review.content}}</textarea>
+<div class="edit-review-container">
+  <h1>Edit Review</h1>
+  <form action="/nature-spots/review/{{review._id}}/update" method="post">
+    <div class="form-group">
+      <label for="content">Review:</label>
+      <textarea
+        class="custom-textarea"
+        name="content"
+        id="content"
+        cols="30"
+        rows="5"
+      >{{review.content}}</textarea>
+    </div>
 
-  <label for="rating">Rating:</label>
-  <input
-    type="number"
-    name="rating"
-    id="rating"
-    value="{{review.rating}}"
-    min="1"
-    max="5"
-  />
+    <div class="form-group">
+      <label for="rating">Rating:</label>
+      <input
+        type="number"
+        name="rating"
+        id="rating"
+        value="{{review.rating}}"
+        min="1"
+        max="5"
+      />
+    </div>
 
-  <button type="submit">Update Review</button>
-</form>
+    <button class="update-button" type="submit">Update Review</button>
+  </form>
+</div>
+
