--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -341,7 +341,6 @@ img {
   background-color: #c82333;
 }
 
-
 /* SPOT DETAILS */
 /* CSS for the nature spot details container */
 .details-container {
@@ -691,4 +690,52 @@ a:hover {
 
 .edit-review-button:hover {
   background-color: #0056b3;
+}
+
+/* EDIT REVIEW */
+
+.edit-review-container {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
+  background-color: #f4f4f4;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-top: 30px;
+}
+
+.edit-review-container h1 {
+  margin-bottom: 20px;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-group label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.update-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #4caf50;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.5s ease-in;
+}
+
+.update-button:hover {
+  background-color: #2d07d3;
+}
+
+.custom-textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
 }
